--- a/main.html
+++ b/main.html
@@ -9,8 +9,24 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
-
+<h1>My Favorite holiday destination</h1>
+	<p>Welcome to my favorite holiday destination! This beautiful place offers a unique blend of stunning natural landscapes, rich history, and vibrant culture. Whether you're seeking adventure, relaxation, or cultural immersion, this destination has it all.</p>
+	<br>
+	<h2>Top 5 Attractions:</h2>
+	<ol>
+		<li><strong>The Majestic Mountain Range</strong> - Hike through breathtaking trails and be rewarded with panoramic views of snow-capped peaks.</li>
+		<li><strong>The Historic Old Town</strong> - Explore the charming cobblestone streets lined with centuries-old buildings and immerse yourself in the local history.</li>
+		<li><strong>The Pristine Beaches</strong> - Relax on sun-kissed shores, swim in crystal-clear waters, and indulge in various water sports.</li>
+		
+	</ol>
+	<h2>Must-Try Foods:</h2>
+	<ul>
+		<li><em>Bold Flavored Seafood Soup</em> - Indulge in a bowl of rich and savory seafood soup, packed with fresh local catches and aromatic spices.</li>
+		<li><em>Fragrant Curry</em> - Experience the complex and fragrant curry dishes, showcasing the region's unique blend of spices and local ingredients.</li>
+		
+	</ul>
 </body>
 
 </html>
