--- a/main.html
+++ b/main.html
@@ -19,6 +19,8 @@
 		<li><strong>The Majestic Mountain Range</strong> - Hike through breathtaking trails and be rewarded with panoramic views of snow-capped peaks.</li>
 		<li><strong>The Historic Old Town</strong> - Explore the charming cobblestone streets lined with centuries-old buildings and immerse yourself in the local history.</li>
 		<li><strong>The Pristine Beaches</strong> - Relax on sun-kissed shores, swim in crystal-clear waters, and indulge in various water sports.</li>
+		<li><strong>The Enchanting Waterfalls</strong> - Discover hidden cascades tucked away in lush green forests, creating a picturesque setting.</li>
+		<li><strong>The Vibrant Night Market</strong> - Experience the bustling atmosphere of the local night market, filled with aromatic street food, unique handicrafts, and lively entertainment.</li>
 		
 	</ol>
 	<h2>Must-Try Foods:</h2>
