--- a/main.html
+++ b/main.html
@@ -16,17 +16,17 @@
 	<br>
 	<h2>Top 5 Attractions:</h2>
 	<ol>
-		<li><strong>The Majestic Mountain Range</strong> - Hike through breathtaking trails and be rewarded with panoramic views of snow-capped peaks.</li>
-		<li><strong>The Historic Old Town</strong> - Explore the charming cobblestone streets lined with centuries-old buildings and immerse yourself in the local history.</li>
-		<li><strong>The Pristine Beaches</strong> - Relax on sun-kissed shores, swim in crystal-clear waters, and indulge in various water sports.</li>
-		<li><strong>The Enchanting Waterfalls</strong> - Discover hidden cascades tucked away in lush green forests, creating a picturesque setting.</li>
-		<li><strong>The Vibrant Night Market</strong> - Experience the bustling atmosphere of the local night market, filled with aromatic street food, unique handicrafts, and lively entertainment.</li>
+		<li><b>The Majestic Mountain Range</b> - Hike through breathtaking trails and be rewarded with panoramic views of snow-capped peaks.</li>
+		<li><b>The Historic Old Town</b> - Explore the charming cobblestone streets lined with centuries-old buildings and immerse yourself in the local history.</li>
+		<li><b>The Pristine Beaches</b> - Relax on sun-kissed shores, swim in crystal-clear waters, and indulge in various water sports.</li>
+		<li><b>The Enchanting Waterfalls</b> - Discover hidden cascades tucked away in lush green forests, creating a picturesque setting.</li>
+		<li><b>The Vibrant Night Market</b> - Experience the bustling atmosphere of the local night market, filled with aromatic street food, unique handicrafts, and lively entertainment.</li>
 		
 	</ol>
 	<h2>Must-Try Foods:</h2>
 	<ul>
-		<li><em>Bold Flavored Seafood Soup</em> - Indulge in a bowl of rich and savory seafood soup, packed with fresh local catches and aromatic spices.</li>
-		<li><em>Fragrant Curry</em> - Experience the complex and fragrant curry dishes, showcasing the region's unique blend of spices and local ingredients.</li>
+		<li><i>Bold Flavored Seafood Soup</i> - Indulge in a bowl of rich and savory seafood soup, packed with fresh local catches and aromatic spices.</li>
+		<li><i>Fragrant Curry</i> - Experience the complex and fragrant curry dishes, showcasing the region's unique blend of spices and local ingredients.</li>
 		
 	</ul>
 </body>
